<resources>
    <string name="app_name">BestBusPro</string>
    <string name="please_wait">Please wait…</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="phone">Phone</string>
    <string name="your_name">Your name</string>
    <string name="tv_please_enter_email">Please enter email address!</string>
    <string name="tv_invalid_email">Invalid email address!</string>
    <string name="tv_please_enter_password">Please enter password!</string>
    <string name="tv_please_enter_your_name">Please enter your name!</string>
    <string name="tv_invalid_confirm_password">Invalid confirm password!</string>
    <string name="register">Register</string>
    <string name="bestbus_cap">BESTBUS</string>
    <string name="offers">Offers</string>
    <string name="update_profile"><u>Update profile</u></string>
    <string name="login_register"><u>Login/Register</u></string>
    <string name="logout"><u>Logout</u></string>
    <string name="change_password"><u>Change password</u></string>
    <string name="best_deals">BEST DEALS</string>
    <string name="discount_on">%1$s%% discount on</string>
    <string name="departure_to_arrival">Departure to Arrival</string>
    <string name="please_contact_to_admin">Please contact to admin for more information.\nBuy one and get one for free if you are a <b>WitBus</b> member.</string>
    <string name="up_to">UP TO</string>
    <string name="off">OFF</string>
    <string name="today_only_enter_code">Today only when you enter this code.</string>
    <string name="copy_code">COPY CODE</string>
    <string name="offer_code_copied">Offer code copied</string>
    <string name="coming_soon">Coming soon</string>
    <string name="hours">%1$s hours</string>
    <string name="dollar_format">$%1$s</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="date">Date</string>
    <string name="search">Search</string>
    <string name="please_choose_seat">Please choose seat</string>
    <string name="select_seat">SELECT SEAT</string>
    <string name="available">Available</string>
    <string name="booked">Booked</string>
    <string name="selecting">Selecting</string>
    <string name="tour_detail">Tour Detail</string>
    <string name="seats">Seat(s):</string>
    <string name="additional_vat">Additional VAT tax per ticket is: $%1$s (%2$d%%)</string>
    <string name="total_amount">Total Amount:</string>
    <string name="usd">USD %1$s</string>
    <string name="book_now">BOOK NOW</string>
    <string name="confirm">confirm</string>
    <string name="finish">finish</string>
    <string name="select_payment_method">Select Payment Method</string>
    <string name="payment_information">Payment Information</string>
    <string name="debit_credit_card">Debit/ Credit Card</string>
    <string name="net_banking">Net Banking</string>
    <string name="code_shipping">Code shipping</string>
    <string name="payment_as_sus_station">Payment as Bus Station</string>
    <string name="please_select_your_card">Please select your card</string>
    <string name="pay_by_your_bank_account">Pay by your bank account</string>
    <string name="tell_us_your_address">Tell us your address and ticket will be delivered</string>
    <string name="get_the_pre_order">Get the pre-order ticket at our station</string>
    <string name="please_choose_payment_method">Please choose payment method</string>
    <string name="electronic_ticket">BESTBUS\nElectronic Ticket</string>
    <string name="are_your_sure">Are you sure?</string>
    <string name="your_tickets"><u>My tickets</u></string>
    <string name="id">ID</string>
    <string name="leave">Leave :</string>
    <string name="unknown">Unknown</string>
    <string name="no_ticket_found">No BESTBUS Electronic ticket found</string>
    <string name="book_tour"><u>Book tour</u></string>
    <string name="scan_ticket"><u>Scan ticket</u></string>
    <string name="scan_more">Scan more</string>
    <string name="an_error_occurred">An error occurred</string>
    <string name="bus">Bus</string>
    <string name="start_time">Start time</string>
    <string name="start_date">Start date</string>
    <string name="end_time">End time</string>
    <string name="end_date">End date</string>
    <string name="time">Time</string>
    <string name="payment_method">Payment method</string>
    <string name="seat_map">Seat Map</string>
    <string name="save">Save</string>
    <string name="add_tour_underline"><u>Add tour</u></string>
    <string name="add_tour">Add Tour</string>
    <string name="tour_name">Tour name</string>
    <string name="old_price">Old price</string>
    <string name="price">Price</string>
    <string name="vat">VAT</string>
    <string name="count">Count</string>
    <string name="seat_quantity">Seat quantity</string>
    <string name="please_check_the_network_connection">Please check the network connection</string>
    <string name="choose_one">Choose one</string>
    <string name="from_gallery">From gallery</string>
    <string name="take_a_picture">Take a picture</string>
</resources>