<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="@dimen/home_item_offer_width"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="@dimen/margin_5"
    app:cardCornerRadius="@dimen/margin_10"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/margin_10"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/text_large"
            android:textColor="@color/black"
            android:text="@string/up_to"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="bottom">

            <TextView
                android:id="@+id/tvOff"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/text_18"
                android:textColor="@color/black"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/text_normal"
                android:textColor="@color/black"
                android:text="@string/off"
                android:textStyle="bold" />
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:textSize="@dimen/text_normal"
            android:textColor="@color/gray_dark"
            android:text="@string/today_only_enter_code" />

        <TextView
            android:id="@+id/tvCopyCode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/text_normal"
            android:textColor="@color/gray_dark"
            android:text="@string/copy_code" />

        <TextView
            android:id="@+id/tvCode"
            android:layout_width="wrap_content"
            android:singleLine="true"
            android:layout_height="wrap_content"
            android:fontFamily="serif-monospace"
            android:textSize="@dimen/text_large"
            android:textStyle="bold"
            android:textColor="#F00" />
    </LinearLayout>
</androidx.cardview.widget.CardView>