<?xml version="1.0" encoding="utf-8"?>
<layout>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bg_main"
        android:orientation="vertical">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/title_bar_height"
            android:background="@drawable/bg_home_header">

            <ImageView
                android:id="@+id/imvHome"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/margin_10"
                android:adjustViewBounds="true"
                android:contentDescription="@string/app_name"
                android:src="@drawable/ic_app" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/seat_map"
                android:textColor="@color/white"
                android:textSize="@dimen/text_18"
                android:textStyle="bold" />
        </FrameLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rcvSeat"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:scrollbars="vertical" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/gray" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_5"
            android:baselineAligned="false"
            android:paddingStart="@dimen/margin_5"
            android:paddingEnd="@dimen/margin_15">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_vertical">

                <androidx.cardview.widget.CardView
                    android:layout_width="@dimen/select_seat_icon_size"
                    android:layout_height="@dimen/select_seat_icon_size"
                    android:layout_margin="@dimen/margin_10"
                    app:cardBackgroundColor="@color/white"
                    app:cardCornerRadius="@dimen/margin_5"
                    app:cardElevation="@dimen/margin_5" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:singleLine="true"
                    android:text="@string/available"
                    android:textColor="@color/white"
                    android:textSize="@dimen/text_large"
                    android:textStyle="italic" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_vertical">

                <androidx.cardview.widget.CardView
                    android:layout_width="@dimen/select_seat_icon_size"
                    android:layout_height="@dimen/select_seat_icon_size"
                    android:layout_margin="@dimen/margin_10"
                    app:cardBackgroundColor="@color/gray_dark"
                    app:cardCornerRadius="@dimen/margin_5"
                    app:cardElevation="@dimen/margin_5" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:singleLine="true"
                    android:text="@string/booked"
                    android:textColor="@color/gray_dark"
                    android:textSize="@dimen/text_large"
                    android:textStyle="italic" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_vertical|end">

                <androidx.cardview.widget.CardView
                    android:layout_width="@dimen/select_seat_icon_size"
                    android:layout_height="@dimen/select_seat_icon_size"
                    android:layout_margin="@dimen/margin_10"
                    app:cardBackgroundColor="@color/color_selecting"
                    app:cardCornerRadius="@dimen/margin_5"
                    app:cardElevation="@dimen/margin_5" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:singleLine="true"
                    android:text="@string/selecting"
                    android:textColor="@color/color_selecting"
                    android:textSize="@dimen/text_large"
                    android:textStyle="italic" />
            </LinearLayout>
        </LinearLayout>

        <Button
            android:id="@+id/btnSelectSeat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/margin_5"
            android:layout_marginBottom="@dimen/margin_15"
            android:background="@drawable/bg_btn_login"
            android:fontFamily="sans-serif-condensed-medium"
            android:paddingHorizontal="@dimen/home_avatar_size"
            android:paddingVertical="@dimen/margin_10"
            android:text="@string/select_seat"
            android:textColor="@color/color_white_green"
            android:textSize="@dimen/text_18"
            android:textStyle="bold" />
    </LinearLayout>
</layout>