<?xml version="1.0" encoding="utf-8"?>
<layout>

    <data>

        <variable
            name="viewModel"
            type="com.app.bestbus.ui.searchTour.SearchTourViewModel" />
    </data>

    <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bg_main">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="@dimen/margin_20"
            android:layout_marginTop="@dimen/search_tour_margin_top"
            android:layout_marginBottom="@dimen/margin_20"
            android:background="@drawable/bg_search_tour"
            android:orientation="vertical"
            android:paddingTop="@dimen/home_avatar_size_half"
            android:paddingHorizontal="@dimen/margin_20">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="center_vertical">

                <ImageView
                    android:layout_width="@dimen/home_menu_icon_size"
                    android:layout_height="@dimen/home_menu_icon_size"
                    android:contentDescription="@string/from"
                    android:src="@drawable/ic_app" />

                <EditText
                    android:id="@+id/edtFrom"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_10"
                    android:hint="@string/from"
                    android:inputType="text"
                    android:textColor="@color/blue"
                    android:textSize="@dimen/text_large"
                    android:textStyle="bold"
                    app:onTextChanged="@{(s) -> viewModel.setFrom(s)}" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="center_vertical">

                <ImageView
                    android:layout_width="@dimen/home_menu_icon_size"
                    android:layout_height="@dimen/home_menu_icon_size"
                    android:contentDescription="@string/to"
                    android:src="@drawable/ic_app" />

                <EditText
                    android:id="@+id/edtTo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_10"
                    android:hint="@string/to"
                    android:inputType="text"
                    android:textColor="@color/blue"
                    android:textSize="@dimen/text_large"
                    android:textStyle="bold"
                    app:onTextChanged="@{(s) -> viewModel.setTo(s)}" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="center_vertical">

                <ImageView
                    android:layout_width="@dimen/home_menu_icon_size"
                    android:layout_height="@dimen/home_menu_icon_size"
                    android:contentDescription="@string/date"
                    android:src="@drawable/ic_app" />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_10"
                    android:focusable="false"
                    android:onClick="@{(v) -> viewModel.onDate(v)}"
                    android:text="@{viewModel.date}"
                    android:textColor="@color/blue"
                    android:textSize="@dimen/text_large"
                    android:textStyle="bold" />
            </LinearLayout>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="2">

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:background="@drawable/bg_btn_login"
                    android:fontFamily="sans-serif-condensed-medium"
                    android:paddingHorizontal="@dimen/home_avatar_size"
                    android:onClick="@{(v) -> viewModel.onSearch(v)}"
                    android:paddingVertical="@dimen/margin_10"
                    android:text="@string/search"
                    android:textColor="@color/color_white_green"
                    android:textSize="@dimen/text_18"
                    android:textStyle="bold" />
            </FrameLayout>
        </LinearLayout>

        <ImageView
            android:id="@+id/imvLogo"
            android:layout_width="@dimen/home_avatar_size"
            android:layout_height="@dimen/home_avatar_size"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/margin_20"
            android:contentDescription="@string/app_name"
            android:src="@drawable/ic_app"
            android:transitionName="logo" />
    </FrameLayout>
</layout>